--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "min-jquery": "^1.7.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
